k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ventilar-web
  labels:
    app: ventilar-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: ventilar-web
